--- a/1109_React/1109_React_3.html
+++ b/1109_React/1109_React_3.html
@@ -14,63 +14,61 @@
     <div id="root"></div>
     <script type="text/babel">
 
-        function App() {
-            let add = function (text, important) {
-                let newData = [...data];
-                newData.push({ text: text, important: important });
-                setData(newData);
 
-            };
-            let remove = function (index) {
-                let newData = [...data];
-                newData.splice(index, 1);
-                setData(newData);
+        function App() {
+            // 處理輸入元件 => 文字框的狀態
+            const [text, setText] = React.useState("");
+            let changeText = function (e) {
+                setText(e.target.value);
             }
 
-            let [data, setData] = React.useState([]);
-
-            return <>
-                <ToDoForm add={add} />
-                <hr />
-                <ToDoList data={data} remove={remove} />
-            </>
-        }
-
-        function ToDoList(props) {
-            let data = props.data
+            // 處理資料列表 => 畫面的狀態
+            // 新增勾選後的資料列表
+            // [{text:字串,important:布林值},...]
+            const [data, setData] = React.useState([]);
             let items = [];
             for (let i = 0; i < data.length; i++) {
+                // #3 判斷資料有沒有勾選
                 if (data[i].important) {
-                    items.push(<li
-                        style={{ fontWeight: "bold" }} key={i}>
-                        <span>{data[i].text}</span>
-                        <button onClick={() => props.remove(i)}>X</button>
-                    </li>);
+                    // console.log(data);
+                    // 原本是data[i],但因為勾選後陣列有其他資料,所以變成data[i].text
+                    // 加入css樣式
+                    items.push(<li style={{ color: "red" }} key={i}>{data[i].text}</li>);
                 } else {
-                    items.push(<li key={i}>
-                        <span>{data[i].text}</span>
-                        <button onClick={() => props.remove(i)}>X</button>
-                    </li>);
+                    items.push(<li key={i}>{data[i].text}</li>);
                 }
+            }
+
+
+            // 勾選的狀態
+            // #1 先暫時設定部勾選=>false
+            const [important, setImportant] = React.useState(false);
+            // #2 狀態改變的函式
+            let checkImportant = function () {
+                // 反轉原來狀態
+                setImportant(!important);
             };
-            return <ul>{items}</ul>
-        }
-        function ToDoForm(props) {
-            let [text, setText] = React.useState("")
-            let changeText = function (e) {
-                setText(e.target.value)
-            };
-            let [important, setimportant] = React.useState(false);
-            let changeImportant = function () {
-                setimportant(!important);
+
+            // 新增的函式
+            let add = function () {
+                let newData = data.slice(0);
+                // #4 資料更改,不再是單純的字串
+                newData.push({text:text,important:important});
+                setData(newData);
+                // 清空文字框狀態
+                setText("");
+                // 清空勾選狀態
+                setImportant("");
             }
             return <>
-                <input type="checkbox" checked={important} onChange={changeImportant} />
-                <input type="text" name="" value={text} onChange={changeText}/*id="textBox"*/ />
-                <button id="btn" onClick={() => {
-                    props.add(text, important);
-                    setText("");
-                }}>新增</button>
+                {/* 勾選的狀態=>checked */}
+                {/* 勾選狀態改變=>onChange */}
+                <input type="checkbox" checked={important} onChange={checkImportant} />
+                <input type="text" value={text} onChange={changeText} />
+                <button onClick={add}>新增</button>
+                <hr />
+                <ul>{items}
+                </ul>
             </>
         }
 
